Use List.of
Co-authored-by: Torben Meyer <torben.meyer@bakdata.com>